Add api/v1/auth/login endpoint